<resources>
    <string name="app_name">Austrom</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="appLogo">AppLogo</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="balance">Balance</string>
    <string name="budget">Budget</string>
    <string name="ops">Operations</string>
    <string name="unresolved">Unresolved</string>
    <string name="add_new_asset">Add New Asset</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="investment">Investment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="shared_budget">Shared Budget</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="login_or_email">Login or Email</string>
    <string name="biometric_title">Authenticate with Biometrics</string>
    <string name="biometric_prompt">Please use your fingerprint or facial recognition to securely access your account. This method is faster and more convenient than entering your password.</string>
    <string name="back_button">Back</string>
    <string name="delete_asset">Delete Asset</string>
    <string name="is_primary_payment_method">Primary Payment Method</string>
    <string name="keyboard_remove">Keyboard Remove</string>
    <string name="button_bio">Keyboard Bio</string>
    <string name="filter">Filter</string>
    <string name="currency_selection">Currency Selection</string>
    <string name="delete">Delete</string>
    <string name="payment_technology">Payment Technology</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>
    <string name="expense">Expense</string>
    <string name="total_balance">Total Balance</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="security_settings">Security Settings</string>
    <string name="base_currency">Base Currency</string>
    <string name="quick_access_pin">Quick Access Pin</string>
    <string name="app_settings">App Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="disabled">Disabled</string>
    <string name="privateAsset">Private</string>
    <string name="asset_name">Asset Name</string>
    <string name="owner">Owner</string>
    <string name="transactions_not_found">Transactions Not Found</string>
    <string name="authorization">Authorization</string>
    <string name="recover_password">Recover Password</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="good_evening">Good evening,</string>
    <string name="good_afternoon">Good afternoon,</string>
    <string name="good_morning">Good morning,</string>
    <string name="good_night">Good night,</string>
    <string name="enter_quick_access_code">Enter Quick Access Code</string>
    <string name="add_new_category">Add New Category</string>
    <string name="popular_currencies">Popular Currencies</string>
    <string name="all_currencies">All Currencies</string>
    <string name="no_assets_found">No Assets Found</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="search">Search</string>
    <string name="budget_name">Budget Name</string>
    <string name="enter_the_name_you_want_you_budget_to_have">Enter the name you want you budget to have</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="receive_invitation_code_from_other_budget_member">Receive invitation code from other budget member</string>
    <string name="category_name">Category Name</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="action_continue">Continue</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="the_action_you_about_to_do_is_irreversible_are_you_sure_you_want_to_proceed">The action you about to do is irreversible. Are you sure you want to proceed?</string>
    <string name="enter_old_quick_access_code">Enter Old Quick Access Code</string>
    <string name="quick_access_code_set_up">Quick Access Code Set Up</string>
    <string name="quick_access_suggest">Would you like to set up quick access code to simplify authorization process? You can do it at any time from the Settings Menu</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="yes">Yes</string>
    <string name="target_name">Target Name</string>
    <string name="source">Source</string>
    <string name="target">Target</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>
    <string name="income_categories">Income Categories</string>
    <string name="transfer_categories">Transfer Categories</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="period">Period</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="your_budget_is">Your budget is:</string>
    <string name="budget_s_invitation_code">Budget\'s invitation code:</string>
    <string name="category">Category</string>
    <string name="notes">Notes</string>
    <string name="cancel_transaction">Cancel Transaction</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="unallocated_balance">Unallocated</string>
    <string name="total">Total:</string>
    <string name="not_yet_implemented">Feature is not yet implemented</string>
    <string name="user_successfully_added">User successfully added</string>
    <string name="user_exists">User with provided username already exist in the system</string>
    <string name="login_cannot_be_empty">Login cannot be empty</string>
    <string name="login_length">The length of login must be of 3 to 16 characters</string>
    <string name="login_limitation">Login can contain only letters, numbers and symbols _ and -</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_has_a_wrong_format">Email has a wrong format</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_length">Password must be at least 4 characters long</string>
    <string name="repeat_the_password">Repeat the password, please</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="leave">Leave</string>
    <string name="create_budget">Create Budget</string>
    <string name="join_budget">Join Budget</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="create_asset">Create Asset</string>
    <string name="wrong_quick_access_code">Wrong Quick Access Code. Please try again</string>
    <string name="quick_access_code_doesn_t_match">Quick Access Code doesn\'t match. Try again</string>
    <string name="enter_current_quick_access_code">Enter Current Quick Access Code</string>
    <string name="enter_new_quick_access_code">Enter New Quick Access Code</string>
    <string name="repeat_new_quick_access_code">Repeat New Quick Access Code</string>
    <string name="asset_s_title_cannot_be_empty">Asset\'s title cannot be empty</string>
    <string name="type_in_a_name_of_the_new_category">Type in a name of the new Category</string>
    <string name="pick_an_icon_for_a_new_category">Pick an icon for a new category</string>
    <string name="add">Add</string>
    <string name="string_dynamic">Dynamic</string>
    <string name="string_static">Static</string>
    <string name="choose_period_start_date">Choose Period Start Date</string>
    <string name="choose_period_end_date">Choose Period End Date</string>
    <string name="language_selection">Language Selection</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="transaction_image_selection">Upload a related image (e.g., receipt or invoice). You can choose an image from your gallery or take a new photo using your camera.</string>
    <string name="food">Food</string>
    <string name="clothes">Clothes</string>
    <string name="health">Health</string>
    <string name="house">House</string>
    <string name="transport">Transport</string>
    <string name="travel">Travel</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="entertainment">Entertainment</string>
    <string name="sport">Sport</string>
    <string name="beauty">Beauty</string>
    <string name="presents">Presents</string>
    <string name="education">Education</string>
    <string name="equipment">Equipment</string>
    <string name="other">Other</string>
    <string name="wages">Wages</string>
    <string name="cashback">Cashback</string>
    <string name="ADA">Cardano</string>
    <string name="AED">United Arab Emirates Dirham</string>
    <string name="AFN">Afghan Afghani</string>
    <string name="ALL">Albanian Lek</string>
    <string name="AMD">Armenian Dram</string>
    <string name="ANG">NL Antillean Guilder</string>
    <string name="AOA">Angolan Kwanza</string>
    <string name="ARB">Arbitrum</string>
    <string name="ARS">Argentine Peso</string>
    <string name="AUD">Australian Dollar</string>
    <string name="AVAX">Avalanche</string>
    <string name="AWG">Aruban Florin</string>
    <string name="AZN">Azerbaijani Manat</string>
    <string name="BAM">Bosnia-Herzegovina Convertible Mark</string>
    <string name="BBD">Barbadian Dollar</string>
    <string name="BDT">Bangladeshi Taka</string>
    <string name="BGN">Bulgarian Lev</string>
    <string name="BHD">Bahraini Dinar</string>
    <string name="BIF">Burundian Franc</string>
    <string name="BMD">Bermudan Dollar</string>
    <string name="BNB">Binance</string>
    <string name="BND">Brunei Dollar</string>
    <string name="BOB">Bolivian Boliviano</string>
    <string name="BRL">Brazilian Real</string>
    <string name="import_from_csv_file">Import from CSV file</string>
    <string name="import_operations">Import Operations</string>
    <string name="export_operations">Export Operations</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="import_transactions">Import Transactions</string>
    <string name="asset">Asset</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="new_asset">New Asset</string>
    <string name="bank">Bank</string>
    <string name="current_amount">Current Amount</string>
    <string name="percent">Percent</string>
    <string name="payer_payee">Payer/Payee</string>
    <string name="planning">Planning</string>
    <string name="analytics">Analytics</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="invitation_recieved">Invitation Recieved</string>
    <string name="you_ve_received_an_invitation_to_join_a_shared_budget_tap_below_to_view_the_details_and_accept_the_invitation">You\'ve received an invitation to join a Shared Budget. Tap below to view the details and accept the invitation!</string>
    <string name="join">Join</string>
    <string name="decline">Decline</string>
    <string name="entire_period">Entire Period</string>
    <string name="custom">Custom</string>
    <string name="by_date">By Date</string>
    <string name="by_category">By Category</string>
    <string name="by_name">By Name</string>
</resources>