<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navbar_balance_mit"
        android:enabled="true"
        android:checkable="false"
        android:icon="@drawable/ic_navigation_balance_temp"
        android:title="@string/balance" />
    <item
        android:id="@+id/navbar_budget_mit"
        android:enabled="true"
        android:checkable="false"
        android:icon="@drawable/ic_navigation_budget_temp"
        android:title="@string/analytics" />
    <item
        android:id="@+id/navbar_planning_mit"
        android:enabled="true"
        android:checkable="false"
        android:icon="@drawable/ic_navigation_planning"
        android:iconTint="@color/backgroundMain"
        android:title="@string/planning" />
    <item
        android:id="@+id/navbar_ops_mit"
        android:enabled="true"
        android:checkable="false"
        android:icon="@drawable/ic_navigation_ops_temp"
        android:title="@string/ops" />
</menu>