<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="Navigation">
        <menu>
            <item
                android:id="@+id/nav_sharedBudget_mit"
                android:checkable="false"
                android:icon="@android:drawable/btn_radio"
                android:title="@string/shared_budget" />
            <item
                android:id="@+id/nav_categories_mit"
                android:checkable="false"
                android:icon="@android:drawable/btn_radio"
                android:title="@string/categories" />
            <item
                android:id="@+id/nav_settings_mit"
                android:checkable="false"
                android:icon="@android:drawable/btn_radio"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>