<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogs.bottomsheetdialogs.PeriodTypeSelectionDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/datetypesel_holder_crv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/datetypesel_week_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/week"
                android:textColor="@color/primaryTextColor" />

            <Button
                android:id="@+id/datetypesel_month_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/month"
                android:textColor="@color/primaryTextColor" />

            <Button
                android:id="@+id/datetypesel_year_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/year"
                android:textColor="@color/primaryTextColor" />

            <Button
                android:id="@+id/datetypesel_allTime_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/entire_period"
                android:textColor="@color/primaryTextColor" />

            <Button
                android:id="@+id/datetypesel_custom_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/custom"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>