<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    tools:context=".fragments.ImportMappingFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/impmap_demoTransactionHolder_rcv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="1"
        tools:listitem="@layout/item_transaction_extended" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.colleagues.austrom.views.SelectorButtonView
            android:id="@+id/impmap_assetSelector_selb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            app:fieldName="@string/asset"
            app:fieldValue="Card" />

        <com.colleagues.austrom.views.SelectorButtonView
            android:id="@+id/impmap_nameSelector_selb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            app:fieldName="@string/payer_payee"
            app:fieldValue="Unknown" />

        <com.colleagues.austrom.views.SelectorButtonView
            android:id="@+id/impmap_amountSelector_selb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            app:fieldName="@string/transaction_amount"
            app:fieldValue="13 500.00 RUB" />

        <com.colleagues.austrom.views.SelectorButtonView
            android:id="@+id/impmap_dateSelector_selb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            app:fieldName="@string/date"
            app:fieldValue="13.01.2025" />

        <com.colleagues.austrom.views.SelectorButtonView
            android:id="@+id/impmap_categorySelector_selb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            app:fieldName="@string/category"
            app:fieldValue="@string/food" />

        <com.colleagues.austrom.views.SelectorButtonView
            android:id="@+id/impmap_commentSelector_selb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            app:fieldName="@string/comment"
            app:fieldValue="Test Comment" />
    </LinearLayout>

    <Button
        android:id="@+id/impmap_impotButton_btn"
        style="@style/MainActionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:text="@string/import_transactions"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:strokeColor="@color/incomeGreenBackground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>


