<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ImportFragment">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:text="@string/import_operations"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />

    <com.colleagues.austrom.views.SettingsButtonView
        android:id="@+id/imprt_fromCsv_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/import_from_csv_file"
        app:secondaryText=".csv"
        app:settingIcon="@drawable/ic_navigation_importfromfile" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:text="@string/export_operations"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />
</LinearLayout>